# scope

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  app.py  build.py  download_models.py  publish.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: docker-build.yml  lint.yml  test.yml
docs/: contributing.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DenoisingStepsSlider.tsx  Header.tsx  InputAndControlsPanel.tsx  PromptInput.tsx  PromptInputWithTimeline.tsx  PromptTimeline.tsx  PromptTimelineToggle.tsx  SettingsPanel.tsx  StatusBar.tsx  TimelineCheckbox.tsx  TimelinePromptEditor.tsx  VideoOutput.tsx
frontend/src/components/ui/: debounced-slider.tsx  label-with-tooltip.tsx  play-overlay.tsx  slider-with-input.tsx  slider.tsx  spinner.tsx  toggle.tsx
frontend/src/data/: parameterMetadata.ts  pipelines.ts
frontend/src/hooks/: useInputMode.ts  useLocalVideo.ts  usePipeline.ts  useStreamState.ts  useTimelinePlayback.ts  useVideoSource.ts  useWebRTC.ts  useWebRTCStats.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: StreamPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: promptColors.ts
lib/: credentials.py  frame_processor.py  models_config.py  pipeline_manager.py  schema.py  tracks.py  webrtc.py
pipelines/: blending.py  interface.py  memory.py  process.py  video.py
pipelines/base/wan2_1/: README.md  scheduler.py  wrapper.py
pipelines/base/wan2_1/modules/: attention.py  causal_model.py  clip.py  model.py  t5.py  vae.py
pipelines/longlive/: __init__.py  inference.py  pipeline.py  test.py
pipelines/longlive/docs/: usage.md
pipelines/longlive/utils/: lora_utils.py
pipelines/mycustom/: inference_unused.py  model.yaml  pipeline.py
pipelines/mycustom_backup/: __init__.py  pipeline.py
pipelines/passthrough/: __init__.py  pipeline.py
pipelines/streamdiffusionv2/: __init__.py  model.yaml  pipeline.py  test.py
pipelines/streamdiffusionv2/docs/: usage.md
pipelines/vod/: __init__.py  pipeline.py
